--- a/day 01/index.html
+++ b/day 01/index.html
@@ -3,10 +3,12 @@
   <head>
     <title>Curso de CSS</title>
     <meta charset="utf-8" />
+    <link rel='stylesheet' type='text/css' href='style.css' />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <div>
+    <div class='card'>
       <h2>Trilha Dev - Módulo CSS</h2>
       <h1>Guia de sobrevivência CSS com a Taqtile</h1>
       <form action="https://taq-css-course.netlify.app" target="blank">
