Refactor lessons a little bit

--- a/day-2-answers/basic/index.html
+++ b/day-2-answers/basic/index.html
@@ -9,11 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
       rel="stylesheet"
     />
-    <link href="../ref.css" rel="stylesheet" type="text/css" />
+    <link href="../../ref.css" rel="stylesheet" type="text/css" />
     <!-- --------------------------------------------------------------------------------- -->
 
     <!-- Coloque suas modificações a partir daqui -->
-    <link href="../ref.css" rel="stylesheet" type="text/css" />
+    <link href="basic.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -31,14 +31,14 @@
           elementos textuais que serão usados no seu site
         </p>
         <div class="ref card">
-          <h1 class="ref h1">h1. Header</h1>
-          <h2 class="ref h2">h2. Header</h2>
-          <h3 class="ref h3">h3. Header</h3>
-          <h4 class="ref h4">h4. Header</h4>
-          <h5 class="ref h5">h5. Header</h5>
-          <h6 class="ref h6">h6. Header</h6>
-          <p class="ref body">.body Parágrafo</p>
-          <span class="ref label">.label Label</span>
+          <h1 class="h1">h1. Header</h1>
+          <h2 class="h2">h2. Header</h2>
+          <h3 class="h3">h3. Header</h3>
+          <h4 class="h4">h4. Header</h4>
+          <h5 class="h5">h5. Header</h5>
+          <h6 class="h6">h6. Header</h6>
+          <p class="body">.body Parágrafo</p>
+          <label class="label">.label Label</label>
         </div>
       </section>
 
@@ -49,15 +49,15 @@
           hover e estado desabilitado.
         </p>
         <div class="ref card">
-          <button class="ref btn btn-primary">Primário</button>
-          <button class="ref btn btn-primary" disabled>desabilitado</button>
-          <button class="ref btn btn-secondary">Secundário</button>
-          <button class="ref btn btn-secondary" disabled>desabilitado</button>
-          <button class="ref btn btn-neutral">Neutro</button>
-          <button class="ref btn btn-neutral" disabled>desabilitado</button>
-          <button class="ref btn btn-primary btn-small">Pequeno</button>
-          <button class="ref btn btn-primary">Regular</button>
-          <button class="ref btn btn-primary btn-large">Grande</button>
+          <button class="btn-primary">Primário</button>
+          <button class="btn-primary" disabled>desabilitado</button>
+          <button class="btn-secondary">Secundário</button>
+          <button class="btn-secondary" disabled>desabilitado</button>
+          <button class="btn-neutral">Neutro</button>
+          <button class="btn-neutral" disabled>desabilitado</button>
+          <button class="btn-primary btn-small">Pequeno</button>
+          <button class="btn-primary">Regular</button>
+          <button class="btn-primary btn-large">Grande</button>
         </div>
       </section>
     </div>
