--- a/day-2/basic/index.html
+++ b/day-2/basic/index.html
@@ -4,44 +4,43 @@
     <title>Curso de CSS - Tipografia</title>
     <meta charset="utf-8" />
 
-    <!-- Arquivos de suporte para a apresentação do material, não fazem parte do exercício -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link href="../../ref.css" rel="stylesheet" type="text/css" />
-    <!-- --------------------------------------------------------------------------------- -->
-
     <!-- Coloque suas modificações a partir daqui -->
   </head>
 
   <body>
-    <div class="ref main">
-      <div class="ref section">
-        <h1 class="ref h1">Elementos básicos</h1>
-        <p class="ref body">
+    <div>
+      <div>
+        <h1>Elementos básicos</h1>
+        <p>
           Vamos começar a montar o nosso design system pelos elementos básicos.
         </p>
       </div>
-      <section class="ref section">
-        <h2 class="ref h2">Tipografia</h2>
-        <p class="ref body">
+      <section>
+        <h2>Tipografia</h2>
+        <p>
           Defina os tamanhos, fontes e eventualmente cores dos títulos e outros
           elementos textuais que serão usados no seu site
         </p>
-        <div class="ref card">
-          <!-- Coloque aqui os seus elementos estilizados -->
+        <div>
+          <h1>h1. Header</h1>
+          <h2>h2. Header</h2>
+          <h3>h3. Header</h3>
+          <p>p. Parágrafo</p>
+          <span>.label Label</span>
         </div>
       </section>
 
-      <section class="ref section">
-        <h2 class="ref h2">Botões</h2>
-        <p class="ref body">
+      <section>
+        <h2>Botões</h2>
+        <p>
           Além das cores do texto e do fundo, também é comum definir efeitos de
           hover e estado desabilitado.
         </p>
-        <div class="ref card">
-          <!-- Coloque aqui os seus elementos estilizados -->
+        <div>
+          <button>Primário</button>
+          <button disabled>desabilitado</button>
+          <button>Regular</button>
+          <button>Grande</button>
         </div>
       </section>
     </div>
