--- a/day-2/icons/index.html
+++ b/day-2/icons/index.html
@@ -14,42 +14,42 @@
     <!-- Coloque suas modificações a partir daqui -->
   </head>
   <body>
-    <div class="ref main">
-      <div class="ref section">
-        <h1 class="ref h1">Ícones</h1>
-        <p class="ref body">
+    <div>
+      <div>
+        <h1>Ícones</h1>
+        <p>
           Uma das práticas mais comuns hoje é utilizar SVG como fonte de ícones.
         </p>
       </div>
-      <section class="ref section">
-        <h2 class="ref h2">Uso direto do SVG</h2>
-        <p class="ref body">
+      <section>
+        <h2>Uso direto do SVG</h2>
+        <p>
           A primeira forma mais simples é colocar o conteúdo do SVG direto no
           lugar onde se deseja renderizar o ícone.
         </p>
-        <div class="ref card example">
+        <div>
           <!-- Coloque aqui os seus elementos estilizados -->
         </div>
       </section>
 
-      <section class="ref section">
-        <h2 class="ref h2">Uso referenciado do SVG</h2>
-        <p class="ref body">
+      <section>
+        <h2>Uso referenciado do SVG</h2>
+        <p>
           Uma segunda forma, para reaproveitar o mesmo SVG, é definindo
           símboloes e referenciando-os.
         </p>
-        <div class="ref card example">
+        <div>
           <!-- Coloque aqui os seus elementos estilizados -->
         </div>
       </section>
 
-      <section class="ref section">
-        <h2 class="ref h2">Via CSS</h2>
-        <p class="ref body">
+      <section>
+        <h2>Via CSS</h2>
+        <p>
           Uma terceira forma é utilizando o pseudo-elemento
-          <code class="ref css">:hover</code> e usando como o SVG como background
+          <code>hover</code> e usando como o SVG como background
         </p>
-        <div class="ref card example">
+        <div>
           <!-- Coloque aqui os seus elementos estilizados -->
       </section>
     </div>
