--- a/day-2/navbar/navbar.html
+++ b/day-2/navbar/navbar.html
@@ -3,18 +3,17 @@
   <head>
     <title>Curso de CSS</title>
     <meta charset="utf-8" />
+    <link rel='stylesheet' type='text/css' href='../../ref.css' />
     <link rel='stylesheet' type='text/css' href='navbar.css' />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <div class="navbar">
+    <nav class="navbar">
         <ul>
-            <li>HOME</li>
-            <li>QUEM SOMOS</li>
-            <li>STARTUP LAB</li>
-            <li>CURSOS NEU</li>
-            <li>CONTATO</li>
+            <li><a href='https://taq-css-course.netlify.app/'>Curso de CSS</a></li>
+            <li><a href='../basic/index.html'>Elementos básicos</a></li>
+            <li><a href='../icons/index.html'>Ícones</a></li>
         </ul>
-    </div>
+    </nav>
 </html>
