--- a/day-3-answers/index.html
+++ b/day-3-answers/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="main">
       <header class="header">
-        <nav>
+        <nav class="navbar">
           <a class="logo"><i class="fas fa-otter"></i></a>
           <ul>
             <li class="nav-item"><a>Git</a></li>
@@ -46,15 +46,19 @@
         </div>
       </div>
       <footer class="footer">
-        <p class="callout">O que você está esperando?</p>
-        <button class="btn btn-primary">Quero começar</button>
+        <div class="disclaimer">
+          <p class="callout">O que você está esperando?</p>
+          <button class="btn btn-primary">Quero começar</button>
+        </div>
         <hr />
-        <a class="logo"><i class="fas fa-otter"></i></a>
-        <ul>
-          <li class="nav-item"><a>Sobre</a></li>
-          <li class="nav-item"><a>Parceiros</a></li>
-          <li class="nav-item"><a>Contato</a></li>
-        </ul>
+        <div class="institutional">
+          <a class="logo"><i class="fas fa-otter"></i></a>
+          <ul>
+            <li class="nav-item"><a>Sobre</a></li>
+            <li class="nav-item"><a>Parceiros</a></li>
+            <li class="nav-item"><a>Contato</a></li>
+          </ul>
+        </div>
       </footer>
     </div>
   </body>
