--- a/day-3/flexbox/flexbox.html
+++ b/day-3/flexbox/flexbox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Card</title>
+    <title>Flexbox</title>
     <meta charset="utf-8" />
 
     <link
