--- a/day-3-answers/index.html
+++ b/day-3-answers/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Curso de CSS - Tipografia</title>
+    <title>Trilha Dev</title>
     <meta charset="utf-8" />
 
     <link
