--- a/day-3/card/card.html
+++ b/day-3/card/card.html
@@ -23,7 +23,7 @@
           <h3 class="card-title">Aula 01</h3>
           <h2>Propriedades básicas de CSS</h2>
           <div class="module-wrapper">
-            <i class="fab fa-css3-alt css"></i>
+            <i class="fab fa-css3-alt icon"></i>
             <div class="infos">
                 <span class="module">Módulo básico</span>
                 <span>Taqtile</span>
