--- a/day-3/card/card.html
+++ b/day-3/card/card.html
@@ -8,27 +8,30 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
     <link href="card.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-      <div class="card">
-          <div class="tag">
-              <div class="circle">
-              </div>
-              <Span class="course">Curso de CSS</Span>
-          </div>
-          
-          <h3 class="card-title">Aula 01</h3>
-          <h2>Propriedades básicas de CSS</h2>
-          <div class="module-wrapper">
-            <i class="fab fa-css3-alt icon"></i>
-            <div class="infos">
-                <span class="module">Módulo básico</span>
-                <span>Taqtile</span>
-            </div>
+    <div class="card">
+      <div class="tag">
+        <div class="circle"></div>
+        <span class="course">Curso de CSS</span>
+      </div>
+
+      <h3 class="card-title">Aula 01</h3>
+      <h2>Propriedades básicas de CSS</h2>
+      <div class="module-wrapper">
+        <i class="fab fa-css3-alt icon"></i>
+        <div class="infos">
+          <span class="module">Módulo básico</span>
+          <span>Taqtile</span>
         </div>
       </div>
+    </div>
   </body>
 </html>
