--- a/day-3/flexbox/flexbox.html
+++ b/day-3/flexbox/flexbox.html
@@ -8,22 +8,19 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
     <link href="flexbox.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-      <div class="container">
-          <div class="box red">
-              VERMELHO
-          </div>
-          <div class=" box green">
-              VERDE
-          </div>
-          <div class="box blue">
-              AZUL
-          </div>
-          
-      </div>
+    <div class="container">
+      <div class="box red">VERMELHO</div>
+      <div class="box green">VERDE</div>
+      <div class="box blue">AZUL</div>
+    </div>
   </body>
 </html>
