Add day-4 answers

--- a/day-4/grid-system/index.html
+++ b/day-4/grid-system/index.html
@@ -4,13 +4,19 @@
     <title>Grid System</title>
     <meta charset="utf-8" />
     <link href="grid.css" rel="stylesheet" type="text/css" />
+    <style>
+      /* reset */
+      body {
+        margin: 20px;
+      }
+    </style>
   </head>
   <body>
-   <div>
-     <div class="box"></div>
-     <div class="box"></div>
-     <div class="box"></div>
-     <div class="box"></div>
-   </div>
+    <div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </body>
 </html>
