--- a/day-2-answers/icons/index.html
+++ b/day-2-answers/icons/index.html
@@ -57,7 +57,7 @@
       </section>
 
       <section class="ref section">
-        <h2 class="ref h2">Uso refernciado do SVG</h2>
+        <h2 class="ref h2">Uso referenciado do SVG</h2>
         <p class="ref body">
           Uma segunda forma, para reaproveitar o mesmo SVG, é definindo
           símboloes e referenciando-os.
